fixed book_vlub index table spacing

--- a/app/assets/stylesheets/bookclubs.scss
+++ b/app/assets/stylesheets/bookclubs.scss
@@ -5,3 +5,19 @@
 .topic-item-actions {
   width: 20%;
 }
+
+.bookclub-item-thumb {
+  width: 10%;
+}
+
+.bookclub-item-title {
+  width: 40%;
+}
+
+.bookclub-item-date {
+  width: 15%;
+}
+
+.bookclub-item-date {
+  width: 20%;
+}
